--- a/old_format/index.html
+++ b/old_format/index.html
@@ -406,6 +406,7 @@
         align-content: center;
         display: flex;
         flex-direction: column;
+        /* margin-top: -50px; */
     }
 
     .game-button {
@@ -427,7 +428,8 @@
         max-width: 90%;
         text-decoration: none;
         user-select: none;
-        margin-bottom: 20px;
+        margin-top: 10px;
+        margin-bottom: 10px;
     }
 
     .leader-board {
@@ -464,35 +466,44 @@
         <a class="game-button leader-board" href="/loadpage/leaderBoard">
             Leaderboard
         </a>
-        <a class="game-button" href="/loadpage/bowling">
-            Bowling
+        <a class="game-button" style="background-color: lightcoral;" href="/loadpage/bets">
+            Bets
         </a>
-        <a class="game-button" href="/loadpage/phs">
-            Polish Hourse Shoes
+        <span style="color: linen; margin-left: auto; margin-right: auto; font-size: 3em;">~~ Day Five ~~</span>
+        <a class="game-button" href="/loadpage/cooking">
+            Cooking
         </a>
+        <span style="color: linen; margin-left: auto; margin-right: auto; font-size: 3em;">~~ Day Four ~~</span>
+        <a class="game-button" href="/loadpage/miniGolf">
+            Mini Golf
+        </a>
+        <a class="game-button" href="/loadpage/bocce">
+            Bocce
+        </a>
+        <span style="color: linen; margin-left: auto; margin-right: auto; font-size: 3em;">~~ Day Three ~~</span>
+        <a class="game-button"  href="/loadpage/canJam">
+            Can/slam Jam
+        </a>
+        <a class="game-button"  href="/loadpage/spikeBall">
+            Spike Ball
+        </a>
+        <span style="color: linen; margin-left: auto; margin-right: auto; font-size: 3em;">~~ Day Two ~~</span>
+        <a class="game-button"  href="/loadpage/phs">
+            Polish Horse Shoes
+        </a>
+        <a class="game-button" href="/loadpage/badmintin">
+            Badminton
+        </a>
+        <span style="color: linen; margin-left: auto; margin-right: auto; font-size: 3em;">~~ Day One ~~</span>
         <a class="game-button" href="/loadpage/cornHole">
             Corn Hole
         </a>
         <a class="game-button" href="/loadpage/beerPong">
             Beer Pong
         </a>
-        <a class="game-button" href="/loadpage/canJam">
-            Can/slam Jam
-        </a>
-        <a class="game-button" href="/loadpage/cooking">
-            Cooking
-        </a>
-        <a class="game-button" href="/loadpage/spikeBall">
-            Spike Ball
-        </a>
-        <a class="game-button" href="/loadpage/miniGolf">
-            Mini Golf
-        </a>
-        <a class="game-button" href="/loadpage/badmintin">
-            Badminton
-        </a>
-        <a class="game-button" href="/loadpage/bocce">
-            Bocce
+        <span style="color: linen; margin-left: auto; margin-right: auto; font-size: 3em;">~~ Not Played ~~</span>
+        <a class="game-button" href="/loadpage/bowling">
+            Bowling
         </a>
     </div>
 
