--- a/old_format/badmintin.html
+++ b/old_format/badmintin.html
@@ -577,12 +577,12 @@
         "score3_2": document.getElementById("spot3-2-score").value,
         "score3_3": document.getElementById("spot3-3-score").value,
         "score3_4": document.getElementById("spot3-4-score").value,
-        "first": null,
-        "second": null,
-        "third": null
+        "first": "",
+        "second": "",
+        "third": ""
       }
 
-      if (returnMe.score3_1 !== null && returnMe.score3_2 !== null) {
+      if (returnMe.score3_1 !== "" && returnMe.score3_2 !== "") {
         if (returnMe.score3_1 > returnMe.score3_2) {
           returnMe.first = document.getElementById("spot3-1").textContent;
           returnMe.second = document.getElementById("spot3-2").textContent;
@@ -591,7 +591,7 @@
           returnMe.second = document.getElementById("spot3-1").textContent;
         }
       }
-      if (returnMe.score3_3 !== null && returnMe.score3_4 !== null) {
+      if (returnMe.score3_3 !== "" && returnMe.score3_4 !== "") {
         if (returnMe.score3_3 > returnMe.score3_4) {
           returnMe.third = document.getElementById("spot3-3").textContent;
         } else {
@@ -662,8 +662,8 @@
         } else {
           document.getElementById("spot3-2").textContent = document.getElementById("spot2-4").textContent;
           document.getElementById("spot3-4").textContent = document.getElementById("spot2-3").textContent;
-          document.getElementById("spot2-3").parentElement.style.backgroundColor = "#90ee90";
-          document.getElementById("spot2-4").parentElement.style.backgroundColor = "#ee9090";
+          document.getElementById("spot2-4").parentElement.style.backgroundColor = "#90ee90";
+          document.getElementById("spot2-3").parentElement.style.backgroundColor = "#ee9090";
         }
       }
 
