--- a/old_format/canJam.html
+++ b/old_format/canJam.html
@@ -583,7 +583,7 @@
       }
 
       if (returnMe.score3_1 !== null && returnMe.score3_2 !== null) {
-        if (returnMe.score3_1 > returnMe.score3_2) {
+        if (returnMe.score3_1 < returnMe.score3_2) {
           returnMe.first = document.getElementById("spot3-1").textContent;
           returnMe.second = document.getElementById("spot3-2").textContent;
         } else {
@@ -637,7 +637,7 @@
         document.getElementById("spot3-1").textContent = '';
         document.getElementById("spot3-3").textContent = '';
       } else {
-        if (this.score2_1 > this.score2_2) {
+        if (this.score2_1 < this.score2_2) {
           document.getElementById("spot3-1").textContent = document.getElementById("spot2-1").textContent;
           document.getElementById("spot3-3").textContent = document.getElementById("spot2-2").textContent;
           document.getElementById("spot2-1").parentElement.style.backgroundColor = "#90ee90";
@@ -662,14 +662,14 @@
         } else {
           document.getElementById("spot3-2").textContent = document.getElementById("spot2-4").textContent;
           document.getElementById("spot3-4").textContent = document.getElementById("spot2-3").textContent;
-          document.getElementById("spot2-3").parentElement.style.backgroundColor = "#90ee90";
-          document.getElementById("spot2-4").parentElement.style.backgroundColor = "#ee9090";
+          document.getElementById("spot2-4").parentElement.style.backgroundColor = "#90ee90";
+          document.getElementById("spot2-3").parentElement.style.backgroundColor = "#ee9090";
         }
       }
 
       if (this.score3_1 === '' || this.score3_2 === '') {
       } else {
-        if (this.score3_1 > this.score3_2) {
+        if (this.score3_1 < this.score3_2) {
           document.getElementById("spot3-1").parentElement.style.backgroundColor = "#90ee90";
           document.getElementById("spot3-2").parentElement.style.backgroundColor = "#ee9090";
         } else {
