--- a/index.html
+++ b/index.html
@@ -34,6 +34,11 @@
     </div>
     <script>
         function loadGames(){
+            console.log(window.location)
+            // fetch().then(res =>
+            // {
+
+            // })
             buttonContainerElem = document.getElementsByClassName("button-container")[0];
             let games=[
                 "Badminton",
