--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css?family=Istok+Web|Roboto+Condensed:700" rel="stylesheet"
         type="text/css" />
 
-    <link rel="stylesheet" href="styleMain.css">
+    <link rel="stylesheet" href="loadpage/styleMain.css">
 </head>
 
 <div>
