txt files being made when page is visited

--- a/leaderboard.html
+++ b/leaderboard.html
@@ -20,7 +20,7 @@
             <p class="year">
                 <i class="fa fa-star"></i> 2021 <i class="fa fa-star"></i>
             </p>
-            <p class="intro" style="font-size: 3em; margin-top: -.5em;">Leaderboard</p>
+            <p class="intro" style="font-size: 3em; margin-top: -.5em;">Leader Board</p>
         </div>
         <a class="game-button-2" href="/">
             Home
