--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </div>
     <script>
         function loadGames(){
-            fetch(window.location.href + "/games").then(res => {
+            fetch(window.location.href + "games").then(res => {
                 console.log(res)
             })
             // fetch().then(res =>
