--- a/teams.html
+++ b/teams.html
@@ -30,53 +30,11 @@
     </header>
 </div>
 <script>
-    var teams = 
-    {
-        "team1":{
-            "name":"Team1",
-            "player":[
-                "Brady",
-                "Jamie",
-                "Kate",
-                "Andrew"
-            ]
-        },
-        "team2":{
-            "name":"Team2",
-            "player":[
-                "Caroline",
-                "Caity",
-                "Nate",
-                "Charlie"
-            ]
-        },
-        "team3":{
-            "name":"Team3",
-            "player":[
-                "Jay",
-                "Ben",
-                "Jacquie"
-            ]
-        },
-        "team4":{
-            "name":"Team4",
-            "player":[
-                "Will",
-                "Taylor",
-                "Ally"
-            ]
-        },
-        "team5":{
-            "name":"Team5",
-            "player":[
-                "Jack",
-                "Tim",
-                "Julie"
-            ]
-        }
-    };
-
-    populateTeams()
+    fetch(window.location.href + "teams.json").then(res => {
+        return res.json();
+    }).then(data =>{
+        populateTeams(data);
+    });
     function populateTeams(){
         teamsDiv = document.getElementById("teams-div")
         for(let teamStr in teams){
