testing dynamic games

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 let gameButton = document.createElement('a');
                 gameButton.innerText = games[game];
                 gameButton.className = "game-button";
-                gameButton.href = "/loadpage/" + games[game];
+                gameButton.href = "/loadpage/games" + games[game];
                 buttonContainerElem.appendChild(gameButton);
             }
         }
