--- a/games/template.html
+++ b/games/template.html
@@ -9,7 +9,7 @@
   <link href="https://fonts.googleapis.com/css?family=Abel" rel="stylesheet" type="text/css" />
   <link href="https://fonts.googleapis.com/css?family=Istok+Web|Roboto+Condensed:700" rel="stylesheet"
     type="text/css" />
-    <link rel="stylesheet" href="styleMain.css">
+    <link rel="stylesheet" href="../loadpage/styleMain.css">
 
   <title id="title">TEMPLATE</title>
 </head>
