--- a/public/games/template.html
+++ b/public/games/template.html
@@ -109,8 +109,8 @@
   <button onclick="submitStandings()">UpdateScore</button>
 </body>
 <script>
-  let gameName = window.location.pathname.split("/")[-1]
-  fetch(gameName+".json").then(res => {
+  let gameName = window.location.pathname.split("/")
+  fetch(gameName[gameName.length-1]+".json").then(res => {
       return res.json();
   }).then(data =>{
       populateTeams(data);
