--- a/public/games/template.html
+++ b/public/games/template.html
@@ -110,7 +110,7 @@
 </body>
 <script>
   let gameName = window.location.pathname.split("/")
-  fetch(gameName[gameName.length-1]).then(res => {
+  fetch(gameName[gameName.length-1].replace(".html",".json")).then(res => {
       return res.json();
   }).then(data =>{
       loadStandings(data);
