--- a/public/games/template.html
+++ b/public/games/template.html
@@ -170,11 +170,11 @@
 
       if (json.first !== ""){
         if (json.first == json.finals.team1){
-          document.getElementById("spot3-1").classList.push("first");
-          document.getElementById("spot3-2").classList.push("second");
+          document.getElementById("spot3-1").classList.add("first");
+          document.getElementById("spot3-2").classList.add("second");
         }else{
-          document.getElementById("spot3-2").classList.push("first");
-          document.getElementById("spot3-1").classList.push("second");
+          document.getElementById("spot3-2").classList.add("first");
+          document.getElementById("spot3-1").classList.add("second");
         }
       }
   }
