--- a/public/games/template.html
+++ b/public/games/template.html
@@ -170,11 +170,11 @@
 
       if (json.first !== ""){
         if (json.first == json.finals.team1){
-          document.getElementById("spot3-1").parentElement.classList.add("first");
-          document.getElementById("spot3-2").parentElement.classList.add("second");
+          document.getElementById("spot3-1").style.backgroundColor("gold");
+          document.getElementById("spot3-2").style.backgroundColor("silver");
         }else{
-          document.getElementById("spot3-2").parentElement.classList.add("first");
-          document.getElementById("spot3-1").parentElement.classList.add("second");
+          document.getElementById("spot3-2").style.backgroundColor("gold");
+          document.getElementById("spot3-1").style.backgroundColor("silver");
         }
       }
   }
