--- a/public/games/template.html
+++ b/public/games/template.html
@@ -167,14 +167,17 @@
 
       document.getElementById("spot3-3-score").value = json.second_place.score1;
       document.getElementById("spot3-4-score").value = json.second_place.score2;
-      console.log(document.getElementById("spot3-1"));
       if (json.first !== ""){
         if (json.first == json.finals.team1){
-          document.getElementById("spot3-1").style.backgroundColor("gold");
-          document.getElementById("spot3-2").style.backgroundColor("silver");
+          var el1 = document.getElementById("spot3-1");
+          el1.style.backgroundColor("gold");
+          var el2 = document.getElementById("spot3-2");
+          el2.style.backgroundColor("gold");
         }else{
-          document.getElementById("spot3-2").style.backgroundColor("gold");
-          document.getElementById("spot3-1").style.backgroundColor("silver");
+          var el1 = document.getElementById("spot3-2");
+          el1.style.backgroundColor("gold");
+          var el2 = document.getElementById("spot3-1");
+          el2.style.backgroundColor("gold");
         }
       }
   }
