--- a/public/games/template.html
+++ b/public/games/template.html
@@ -169,11 +169,11 @@
       document.getElementById("spot3-4-score").value = json.second_place.score2;
       if (json.first !== ""){
         if (json.first == json.finals.team1){
-          document.getElementById("spot3-1").style.backgroundColor=("gold");
-          document.getElementById("spot3-2").style.backgroundColor=("silver");
+          document.getElementById("spot3-1").parentElement.style.backgroundColor=("gold");
+          document.getElementById("spot3-2").parentElement.style.backgroundColor=("silver");
         }else{
-          document.getElementById("spot3-2").style.backgroundColor=("gold");
-          document.getElementById("spot3-1").style.backgroundColor=("silver");
+          document.getElementById("spot3-2").parentElement.style.backgroundColor=("gold");
+          document.getElementById("spot3-1").parentElement.style.backgroundColor=("silver");
         }
       }
   }
