--- a/public/games/template.html
+++ b/public/games/template.html
@@ -190,9 +190,9 @@
       }
       if (json.third !== ""){
         if (json.third == json.third_place.team1){
-          document.getElementById("spot3-3").parentElement.style.backgroundColor=("bronze");
+          document.getElementById("spot3-3").parentElement.style.backgroundColor=("#CD7F32");
         }else{
-          document.getElementById("spot3-4").parentElement.style.backgroundColor=("bronze");
+          document.getElementById("spot3-4").parentElement.style.backgroundColor=("#CD7F32");
         }
       }
       //play in gray loser
